# data_science_projects

./: .gitignore  README.md
ANP_Gasolina/: LSTM.ipynb
ARIMA_1/: analysis_arima_extended.ipynb
AlphaNova_trading/alpha-nova/: AlphaNovaContestTemplate.24.02.25.ipynb  AlphaNovaContestTemplate.24.02.25_max.ipynb  README.md  pyproject.toml  requirements.txt
AlphaNova_trading/alpha-nova/.ipynb_checkpoints/: AlphaNovaContestTemplate.24.02.25-checkpoint.ipynb
Elasticidade/: elasticity.ipynb
Elasticity/: auto_stata.dta  elasticity_indepedent_variables.ipynb  elasticity_reg_constant.py
Elasticity/cross_elasticity/: cross_elasticity.ipynb
PANVEL/Elasticidade/Analise/: max_PoC_elasticidade_categoria_v2.ipynb
Panvel_Data_Analysis/: analysis.ipynb
Panvel_Data_Analysis/dados/: Itens.parquet
Panvel_Data_Analysis/dados_ibge/: populacao_sul_2020.csv  populacao_sul_2020.xls
Stone/: Apresentacao_Case_Stone_Max_Resende.pptx
Stone/case/Estudo de dados/: Clients.csv  df_quintil_cluster.parquet  stone_estudo_dados_churn.ipynb  stone_estudo_dados_cluster.ipynb
Tender_Rejection_Model/: 2-lowest_rate_model.ipynb  3-bid_is_booked.ipynb  4.1-tender_analysis.ipynb  README.md
data_science_projects/ANP_Gasolina/: Extracao_ANP.ipynb  crawler_esalq.py
data_science_projects/ARIMA_2/: analysis_2.ipynb  requirements.txt
data_science_projects/Lane_Selection_Index/: analysis.ipynb
data_science_projects/Panvel_Data_Analysis/: analysis.ipynb
data_science_projects/Tender_Rejection_Model/: 1-analysis.ipynb  4.2-tender_rejection_model.ipynb  utils.py
(+4 files in other folders)
